# identity

./: CHANGELOG.md  Cargo.toml
.cargo/: audit.toml
.github/: CONTRIBUTING.md
.github/actions/iota-rebase-sandbox/setup/: action.yml
.github/actions/publish/publish-wasm/: action.yml
.github/actions/release/bump-versions/: action.yml
.github/releases/: wasm-v0.5.0-dev.6.md  wasm-v0.5.0.md
.github/workflows/: build-and-test.yml  clippy.yml  shared-build-wasm.yml  wasm-publish-to-npm.yml  wasm-retag-npm.yml
.github/workflows/scripts/: populate-changelog-descriptions.sh
bindings/grpc/: Cargo.toml  README.md
bindings/grpc/src/: main.rs
bindings/grpc/tests/api/: helpers.rs
bindings/wasm/: Cargo.toml
bindings/wasm/examples/src/: main.ts
bindings/wasm/identity_wasm/: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
bindings/wasm/identity_wasm/examples/: README.md
bindings/wasm/identity_wasm/lib/: index.ts  jwk_storage_pq.ts  pq_verifier.ts  proposal.ts
bindings/wasm/identity_wasm/proc_typescript/: Cargo.toml
bindings/wasm/identity_wasm/src/: error.rs  lib.rs
bindings/wasm/identity_wasm/tests/: core.ts
bindings/wasm/lib/: index.ts
bindings/wasm/src/: lib.rs
bindings/wasm/src/did/: did_compositejwk.rs  wasm_core_document.rs
bindings/wasm/src/iota/: mod.rs
bindings/wasm/src/jose/: compositejwk.rs  jwk.rs
bindings/wasm/src/storage/: jwk_storage_pqc.rs  mod.rs
examples/: Cargo.toml  README.md
examples/0_basic/: 9_vc_v2.rs
examples/1_advanced/: 0_did_controls_did.rs  10_zkp_revocation.rs  11_linked_verifiable_presentation.rs  12_advanced_transactions.rs  13_iota_keytool_integration.rs  7_sd_jwt.rs  9_zkp.rs  hybrid.rs  pq.rs  sd_jwt_v2.rs
examples/utils/: utils.rs
identity_chain_agnostic/: Cargo.toml
identity_chain_agnostic/src/: account_id.rs  asset_type.rs  chain_id.rs  iota.rs  lib.rs  parser.rs  resource.rs
identity_chain_agnostic/src/iota/: address.rs  mod.rs  network.rs  resource.rs
identity_core/: Cargo.toml  README.md
identity_core/src/: error.rs
identity_core/src/common/: context.rs  data_url.rs  mod.rs  ordered_set.rs  single_struct_error.rs  url.rs
identity_credential/: Cargo.toml
identity_credential/src/: error.rs
identity_credential/src/credential/: builder.rs  credential_v2.rs  enveloped_credential.rs  jwt.rs  jwt_serialization.rs  linked_verifiable_presentation_service.rs  mod.rs
identity_credential/src/domain_linkage/: domain_linkage_configuration.rs  domain_linkage_credential_builder.rs  error.rs
identity_credential/src/presentation/: jwt_presentation_options.rs  jwt_serialization.rs  mod.rs  presentation.rs  presentation_builder.rs
identity_credential/src/revocation/: error.rs
identity_credential/src/revocation/revocation_bitmap_2022/: document_ext.rs
identity_credential/src/revocation/status_list_2021/: credential.rs  status_list.rs
identity_credential/src/revocation/validity_timeframe_2024/: revocation_timeframe_status.rs
identity_credential/src/sd_jwt_vc/: builder.rs  claims.rs  error.rs  presentation.rs  token.rs
identity_credential/src/sd_jwt_vc/metadata/: claim.rs  display.rs  integrity.rs  issuer.rs  vc_type.rs
identity_credential/src/sd_jwt_vc/tests/: mod.rs  presentation.rs  validation.rs
identity_credential/src/validator/: options.rs
identity_credential/src/validator/jpt_credential_validation/: jpt_credential_validator_utils.rs
identity_credential/src/validator/jwt_credential_validation/: decoded_jwt_credential.rs  error.rs  jwt_credential_validator.rs  jwt_credential_validator_hybrid.rs  jwt_credential_validator_utils.rs  mod.rs
identity_credential/src/validator/jwt_presentation_validation/: decoded_jwt_presentation.rs  error.rs  jwt_presentation_validator.rs  mod.rs  (+2 more)
identity_did/: Cargo.toml
identity_did/src/: did.rs  did_compositejwk.rs  did_jwk.rs  error.rs  lib.rs
identity_document/: Cargo.toml
identity_document/src/: error.rs
identity_document/src/document/: core_document.rs
identity_ecdsa_verifier/: Cargo.toml
identity_eddsa_verifier/: Cargo.toml
identity_iota/: Cargo.toml  README.md
identity_iota_core/: Cargo.toml  build.rs
identity_iota_core/src/: error.rs  lib.rs
identity_iota_core/src/did/: iota_did.rs
identity_iota_core/src/document/: iota_document.rs
identity_iota_core/src/rebased/: error.rs  mod.rs  utils.rs
identity_iota_core/tests/e2e/: asset.rs  common.rs  identity.rs  migration.rs
identity_jose/: Cargo.toml
identity_jose/src/: error.rs
identity_jose/src/jwk/: composite_jwk.rs  jwk_akp.rs  key.rs  key_hybrid.rs  key_params.rs  key_type.rs  mod.rs
identity_jose/src/jws/: algorithm.rs  decoder.rs  format.rs
identity_pqc_verifier/: Cargo.toml  README.md
identity_pqc_verifier/src/: lib.rs  oqs_verifier.rs  pqc_verifier.rs
identity_resolver/: Cargo.toml
identity_resolver/src/: error.rs
identity_resolver/src/resolution/: resolver.rs
identity_storage/: Cargo.toml
identity_storage/src/key_id_storage/: keytool.rs  method_digest.rs
identity_storage/src/key_storage/: bls.rs  jwk_storage_pqc.rs  keytool.rs  memstore.rs  mod.rs
identity_storage/src/storage/: did_jwk_document_ext.rs  error.rs  hybrid_jws_document_ext.rs  jwk_document_ext.rs  mod.rs  pqc_jws_document_ext.rs  storage_signer.rs
identity_stronghold/: Cargo.toml
identity_stronghold/src/storage/: mod.rs  stronghold_jwk_storage_bbs_plus_ext.rs
identity_stronghold/src/tests/: test_bbs_ext.rs
identity_verification/: Cargo.toml
identity_verification/src/: error.rs
identity_verification/src/verification_method/: material.rs  method.rs  method_scope.rs
(+183 files in other folders)
