[package]
name = "identity_chain_agnostic"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dev-dependencies]
anyhow = "1.0.98"
identity_chain_agnostic = { path = ".", features = ["serde"] }
serde_json = { workspace = true, features = ["std"] }
