[package]
name = "identity_did"
version = "1.6.0-beta"
authors.workspace = true
edition = "2021"
homepage.workspace = true
keywords = ["iota", "tangle", "identity", "did"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
description = "Agnostic implementation of the Decentralized Identifiers (DID) standard."

[dependencies]
did_url_parser = { version = "0.3.0", features = ["std", "serde"] }
form_urlencoded = { version = "1.2.0", default-features = false, features = ["alloc"] }
identity_core = { version = "=1.6.0-beta", path = "../identity_core", default-features = false }
identity_jose = { version = "=1.6.0-beta", path = "../identity_jose" }
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
product_common = { git = "https://github.com/iotaledger/product-core.git", branch = "feat/iota-v1-2-3-and-resources-for-wasm", package = "product_common", default-features = false, features = ["bindings"] }

[dev-dependencies]
proptest = { version = "1.0" }
serde_json.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
