[package]
name = "identity_document"
version = "1.6.0-beta"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "identity", "did"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
description = "Method-agnostic implementation of the Decentralized Identifiers (DID) standard."

[dependencies]
did_url_parser = { version = "0.2.0", features = ["std", "serde"] }
identity_core = { version = "=1.6.0-beta", path = "../identity_core", default-features = false }
identity_did = { version = "=1.6.0-beta", path = "../identity_did" }
identity_verification = { version = "=1.6.0-beta", path = "../identity_verification", default-features = false }
indexmap = { version = "2.0", default-features = false, features = ["std", "serde"] }
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
product_common = { git = "https://github.com/iotaledger/product-core.git", branch = "feat/iota-v1-2-3-and-resources-for-wasm", package = "product_common", default-features = false, features = ["bindings"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
serde_json.workspace = true

[[bench]]
name = "deserialize_document"
harness = false

[lints]
workspace = true
